--- a/grafo-dijkstra/pom.xml
+++ b/grafo-dijkstra/pom.xml
@@ -11,15 +11,45 @@
 		<dependency>
 			<groupId>org.graphstream</groupId>
 			<artifactId>gs-core</artifactId>
-			<version>1.3</version>
+			<version>2.0</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.graphstream</groupId>
+			<artifactId>gs-algo</artifactId>
+			<version>2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.graphstream</groupId>
+			<artifactId>gs-ui-javafx</artifactId>
+			<version>2.0</version>
+		</dependency>
 		<dependency>
 			<groupId>org.openjfx</groupId>
 			<artifactId>javafx-controls</artifactId>
 			<version>24.0.2</version>
 		</dependency>
-	</dependencies>
 
+	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.openjfx</groupId>
+				<artifactId>javafx-maven-plugin</artifactId>
+				<version>0.0.8</version>
+				<configuration>
+					<!-- Full package path of your Main class -->
+					<mainClass>grafos.run.Main</mainClass>
+				</configuration>
+				</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.11.0</version>
+				<configuration>
+					<release>22</release>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
